[tool.poetry]
name = "in-office"
version = "0.1.0"
description = ""
authors = ["Daniel Sørenes <daniel@sorenes.no>"]
readme = "README.md"
packages = [{include = "in_office"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-APScheduler = "^1.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
